gcc/testsuite/g++.old-deja/g++.brendan/shadow1.C
// { dg-do assemble  }
// GROUPS passed errors
void f( int a) {
  int a;	// this should be an error now// { dg-error "" } .*
	{
		int a;
	}
}
